# flight-itinerary-recommender-python

./: README.md  handler.py  pyproject.toml  recommender.py  requirements.txt  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
flight-recommender-api/: serverless.yml
flight-recommender-serverless/: package.json  serverless.yml
