[tool.poetry]
name = "flight-recommender-api"
version = "0.1.0"
description = "A recommender system that uses tensorflow 2"
authors = ["Stephanie Honore"]
readme = "README.md"
packages = [{include = "flight_recommender_api"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.5"
tensorflow = "^2.11.0"
tensorflow-recommenders = "^0.7.2"
tensorflow-datasets = "^4.7.0"
boto3 = "^1.26.16"
pandas = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
